# khimera

./: .gitignore  CONTRIBUTING.md  DEPENDENTS.md  README.md  ROADMAP.md  climera.code-workspace  environment.yml  khimera.code-workspace  pyproject.toml
.github/workflows/: ci.yml  publish-noarch.yml
archive/2025-02-18_plugin-storage-categories/: ARCHIVE_LOG.md  create.py
archive/2025-06-01_readme/: ARCHIVE_LOG.md  REAMDE.md
archive/2025-06-02_pyproject/: ARCHIVE_LOG.md  pyproject.toml
conda.recipe/: meta.yaml
config/dictionaries/: project.txt  python.txt  tools.txt
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  releaserc.toml
docs/: ALTERNATIVES.md  Makefile  conf.py  dependencies.md  index.md
docs/_src/: cli.md  components.md  conf.py  core.md  discovery.md  exceptions.md  index.md  management.md  plugins.md  top-level.md  utils.md
docs/adr/: 0-alternatives.md  1-plugin-declaration.md  2-registration-programmatic-elements.md  3-registration-static-resources.md
docs/api/: cli.md  components.md  core.md  discovery.md  exceptions.md  index.md  management.md  plugins.md  top-level.md  utils.md
docs/guide/: getting-started.md  installation.md  usage.md
docs/internals/: architecture.md  index.md
src/climera/: __init__.py
src/khimera/: __init__.py  __main__.py  __version__.py  cli.py  exceptions.py
src/khimera/cli/: __init__.py  app.py  cli_app.py
src/khimera/components/: __init__.py  api.py  assets.py  commands.py  core.py  dependencies.py  hooks.py  metadata.py
src/khimera/contributions/: __init__.py  api.py  assets.py  commands.py  core.py  hooks.py  metadata.py
src/khimera/core/: __init__.py  components.py  dependencies.py  specifications.py
src/khimera/discovery/: __init__.py  find.py  strategies.py
src/khimera/management/: __init__.py  register.py  validate.py
src/khimera/plugins/: __init__.py  core.py  create.py  declare.py  discover.py  register.py  validate.py  variants.py
src/khimera/utils/: __init__.py  factories.py  mixins.py
tests/test_climera/: __init__.py
tests/test_khimera/: __init__.py
tests/test_khimera/test_cli/: __init__.py  test_app.py  test_cli_app.py
tests/test_khimera/test_components/: __init__.py  test_api.py  test_assets.py  test_commands.py  test_core.py  test_dependencies.py  test_hooks.py  test_metadata.py
tests/test_khimera/test_contributions/: __init__.py  test_api.py  test_assets.py  test_commands.py  test_core.py  test_hooks.py  test_metadata.py
tests/test_khimera/test_core/: __init__.py  test_cli_app.py  test_components.py  test_dependencies.py  test_specifications.py
tests/test_khimera/test_discovery/: __init__.py  test_find.py  test_strategies.py
tests/test_khimera/test_management/: __init__.py  test_register.py  test_validate.py
tests/test_khimera/test_plugins/: __init__.py  test_create.py  test_declare.py  test_discover.py  test_registry.py  test_validate.py
tests/test_khimera/test_utils/: __init__.py  test_factories.py  test_mixins.py
