# ==================================================================================================
# Pyproject Configuration for Khimera Package
# ==================================================================================================

# --- Build System Requirements --------------------------------------------------------------------

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


# --- Package Metadata -----------------------------------------------------------------------------

[project]
name = "khimera"
version = "0.1.0"
authors = [{name = "Esther Poniatowski", email = "esther.poniatowski@ens.psl.eu"}]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = {file = "README.md", content-type = "text/markdown"}
description = "Plugin system framework for automating development and integration of package extensions"
keywords = ["plugin-system", "plugin-development", "dynamic-programming", "extension-framework", "host-app"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
urls = {homepage = "https://github.com/esther-poniatowski/khimera"}


# --- Dependencies ---------------------------------------------------------------------------------

requires-python = ">=3.12"

dependencies = [
    "deepdiff",          # Deep object comparison
    "beartype",          # Runtime type checking
    "pyyaml",            # YAML configuration parsing
    "types-pyyaml",      # Type stubs for PyYaml
    "typer",             # CLI interface
    "rich",              # Improved CLI output formatting
]


# --- Package Source Code --------------------------------------------------------------------------

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# --- CLI Entry Points -----------------------------------------------------------------------------

[project.scripts]
khimera = "khimera.cli:main"


# --- Versioning -----------------------------------------------------------------------------------

[tool.semantic_release]
branch = "main"

version_toml = [
	"pyproject.toml:project.version",
	"CITATION.cff:version"
]
version_variables = ["src/khimera/__version__.py:__version__"]

commit_parser = "angular"
major_versions = ["BREAKING CHANGE"]
minor_versions = ["feat"]
patch_versions = ["fix", "perf", "refactor"]

tag_format = "v{version}"

[tool.semantic_release.changelog]
changelog_file = "docs/CHANGELOG.md"
